// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jest-auto-snapshots > Switch Matches snapshot when boolean prop "disabled" is set to: "false" 1`] = `
<ForwardRef(styled.div)>
  <Text
    color="grayDarker"
    hasError={false}
    htmlFor="jest-auto-snapshots String Fixture"
    type="label"
  >
    jest-auto-snapshots String Fixture
  </Text>
  <ForwardRef(styled.label)>
    <ForwardRef(styled.input)
      aria-checked={true}
      aria-readonly={false}
      checked={true}
      disabled={false}
      id="jest-auto-snapshots String Fixture"
      onChange={[MockFunction]}
      role="switch"
      type="checkbox"
    />
    <ForwardRef(styled.span)
      aria-hidden="true"
    />
  </ForwardRef(styled.label)>
</ForwardRef(styled.div)>
`;

exports[`jest-auto-snapshots > Switch Matches snapshot when boolean prop "isOn" is set to: "false" 1`] = `
<ForwardRef(styled.div)>
  <Text
    color="grayDarker"
    hasError={false}
    htmlFor="jest-auto-snapshots String Fixture"
    type="label"
  >
    jest-auto-snapshots String Fixture
  </Text>
  <ForwardRef(styled.label)>
    <ForwardRef(styled.input)
      aria-checked={false}
      aria-readonly={true}
      checked={false}
      disabled={true}
      id="jest-auto-snapshots String Fixture"
      onChange={[MockFunction]}
      role="switch"
      type="checkbox"
    />
    <ForwardRef(styled.span)
      aria-hidden="true"
    />
  </ForwardRef(styled.label)>
</ForwardRef(styled.div)>
`;

exports[`jest-auto-snapshots > Switch Matches snapshot when passed all props 1`] = `
<ForwardRef(styled.div)>
  <Text
    color="grayDarker"
    hasError={false}
    htmlFor="jest-auto-snapshots String Fixture"
    type="label"
  >
    jest-auto-snapshots String Fixture
  </Text>
  <ForwardRef(styled.label)>
    <ForwardRef(styled.input)
      aria-checked={true}
      aria-readonly={true}
      checked={true}
      disabled={true}
      id="jest-auto-snapshots String Fixture"
      onChange={[MockFunction]}
      role="switch"
      type="checkbox"
    />
    <ForwardRef(styled.span)
      aria-hidden="true"
    />
  </ForwardRef(styled.label)>
</ForwardRef(styled.div)>
`;

exports[`jest-auto-snapshots > Switch Matches snapshot when passed only required props 1`] = `
<ForwardRef(styled.div)>
  <Text
    color="grayDarker"
    hasError={false}
    htmlFor="jest-auto-snapshots String Fixture"
    type="label"
  >
    jest-auto-snapshots String Fixture
  </Text>
  <ForwardRef(styled.label)>
    <ForwardRef(styled.input)
      aria-checked={false}
      aria-readonly={false}
      checked={false}
      disabled={false}
      id="jest-auto-snapshots String Fixture"
      onChange={[MockFunction]}
      role="switch"
      type="checkbox"
    />
    <ForwardRef(styled.span)
      aria-hidden="true"
    />
  </ForwardRef(styled.label)>
</ForwardRef(styled.div)>
`;
